--- a/arch/arm64/configs/star2qlte_chn_open_defconfig
+++ b/arch/arm64/configs/star2qlte_chn_open_defconfig
@@ -271,6 +271,7 @@ CONFIG_HAVE_GCC_PLUGINS=y
 # CONFIG_ARCH_SUPPORTS_LTO_CLANG is not set
 CONFIG_LTO_NONE=y
 # CONFIG_LTO_CLANG is not set
+CONFIG_CC_IS_GCC=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
