--- a/arch/arm64/configs/star2qlte_chn_open_defconfig
+++ b/arch/arm64/configs/star2qlte_chn_open_defconfig
@@ -574,23 +574,23 @@ CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 # CONFIG_ARM64_SW_TTBR0_PAN is not set
-CONFIG_UH=y
-CONFIG_UH_DEBUG=y
-CONFIG_UH_RKP=y
+# CONFIG_UH is not set
+# CONFIG_UH_DEBUG is not set
+# CONFIG_UH_RKP is not set
 # CONFIG_UH_RKP_8G is not set
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
+# CONFIG_RKP_KDP is not set
+# CONFIG_RKP_NS_PROT is not set
+# CONFIG_RKP_DMAP_PROT is not st
 # CONFIG_UH_INFORM is not set
 
 #
 # Control Flow Protection
 #
-CONFIG_RKP_CFP=y
-CONFIG_RKP_CFP_JOPP=y
-CONFIG_RKP_CFP_JOPP_MAGIC=0x00be7bad
-CONFIG_RKP_CFP_ROPP=y
-CONFIG_RKP_CFP_ROPP_SYSREGKEY=y
+# CONFIG_RKP_CFP is not set
+# CONFIG_RKP_CFP_JOPP is not set
+# CONFIG_RKP_CFP_JOPP_MAGIC is not set
+# CONFIG_RKP_CFP_ROPP is not set
+# CONFIG_RKP_CFP_ROPP_SYSREGKEY is not set
 # CONFIG_RKP_CFP_ROPP_RANDKEY is not set
 # CONFIG_RKP_CFP_ROPP_FIXKEY is not set
 # CONFIG_RKP_CFP_ROPP_ZEROKEY is not set
@@ -1379,7 +1379,7 @@ CONFIG_OF_BATTERYDATA=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-# CONFIG_ZRAM is not set
+CONFIG_ZRAM=y
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -5363,15 +5363,15 @@ CONFIG_TRUSTONIC_TEE_LPAE=y
 # CONFIG_TRUSTONIC_TEE_DEBUG is not set
 CONFIG_TRUSTONIC_TRUSTED_UI_QC=y
 # CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK is not set
-CONFIG_FIVE_TEE_DRIVER=y
+# CONFIG_FIVE_TEE_DRIVER is not set
 # CONFIG_FIVE_USE_EMULATOR is not set
 # CONFIG_FIVE_USE_TRUSTONIC is not set
-CONFIG_FIVE_USE_QSEE=y
+# CONFIG_FIVE_USE_QSEE=y
 # CONFIG_TEE_DRIVER_DEBUG is not set
-CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP=y
-CONFIG_FIVE_SIGN_TA=n
-CONFIG_FIVE_SIGNCLIENT_PATH="/home/dpi/qb5_8814/workspace/P4_1716/buildscript/tools/signclient.jar"
-CONFIG_FIVE_PILSPLITTER_PATH="/home/dpi/qb5_8814/workspace/P4_1716/buildscript/tools/pil_splitter.py"
+# CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP=y
+# CONFIG_FIVE_SIGN_TA=n
+# CONFIG_FIVE_SIGNCLIENT_PATH="/home/dpi/qb5_8814/workspace/P4_1716/buildscript/tools/signclient.jar"
+# CONFIG_FIVE_PILSPLITTER_PATH="/home/dpi/qb5_8814/workspace/P4_1716/buildscript/tools/pil_splitter.py"
 CONFIG_GATOR=m
 # CONFIG_GATOR_DO_NOT_ONLINE_CORES_AT_STARTUP is not set
 
@@ -5451,7 +5451,7 @@ CONFIG_QUOTACTL=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
-# CONFIG_OVERLAY_FS is not set
+CONFIG_OVERLAY_FS=y
 
 #
 # Caches
@@ -5905,29 +5905,29 @@ CONFIG_INTEGRITY_TRUSTED_KEYRING=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_FIVE=y
+# CONFIG_FIVE is not st
 # CONFIG_FIVE_DEBUG is not set
-CONFIG_FIVE_CERT_USER="x509_five_user.der"
-CONFIG_FIVE_DEFAULT_HASH_SHA1=y
+# CONFIG_FIVE_CERT_USER is not set
+# CONFIG_FIVE_DEFAULT_HASH_SHA1 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
-CONFIG_FIVE_DEFAULT_HASH="sha1"
-CONFIG_FIVE_TRUSTED_KEYRING=y
-CONFIG_PROCA=y
-CONFIG_GAF=y
+# CONFIG_FIVE_DEFAULT_HASH="sha1"
+# CONFIG_FIVE_TRUSTED_KEYRING is not set
+# CONFIG_PROCA is not set
+# CONFIG_GAF is not set
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
-CONFIG_GAF_V6=y
+# CONFIG_GAF_V6 is not set
 
 #
 # ICCC
 #
 CONFIG_TZ_ICCC=y
 # CONFIG_TZ_ICCC_DEBUG is not set
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
-CONFIG_SECURITY_DSMS=y
+# CONFIG_SECURITY_DSMS is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_SMACK is not set
 # CONFIG_DEFAULT_SECURITY_DAC is not set
