--- a/arch/arm64/configs/star2qlte_chn_open_defconfig
+++ b/arch/arm64/configs/star2qlte_chn_open_defconfig
@@ -234,8 +234,8 @@ CONFIG_SYSTEM_DATA_VERIFICATION=y
 CONFIG_DEFERRED_INITCALLS=y
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
-CONFIG_KPROBES=y
-CONFIG_KPROBE_EVENTS=y
+# CONFIG_KPROBES=y
+# CONFIG_KPROBE_EVENTS=y
 # CONFIG_JUMP_LABEL is not set
 # CONFIG_UPROBES is not set
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
