--- a/arch/arm64/configs/star2qlte_chn_open_defconfig
+++ b/arch/arm64/configs/star2qlte_chn_open_defconfig
@@ -544,7 +544,7 @@ CONFIG_VMAP_LAZY_PURGING_FACTOR=32
 CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
 CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
 CONFIG_FIX_INACTIVE_RATIO=y
-CONFIG_SWAP_ENABLE_READAHEAD=y
+# CONFIG_SWAP_ENABLE_READAHEAD is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_MMAP_READAROUND_LIMIT=0
@@ -2321,7 +2321,7 @@ CONFIG_SERIO_LIBPS2=y
 #
 CONFIG_TTY=y
 # CONFIG_VT is not set
-CONFIG_UNIX98_PTYS=n
+# CONFIG_UNIX98_PTYS is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_NOZOMI is not set
