--- a/arch/arm64/configs/star2qlte_chn_open_defconfig
+++ b/arch/arm64/configs/star2qlte_chn_open_defconfig
@@ -657,9 +657,9 @@ CONFIG_MACH_STAR2QLTE_CHNZC=y
 # CONFIG_SEC_CROWNQLTE_PROJECT is not set
 # CONFIG_SEC_LYKANLTE_PROJECT is not set
 CONFIG_LOD_SEC=y
-# CONFIG_TIMA=y
-# CONFIG_TIMA_LKMAUTH=y
-# CONFIG_TIMA_LKM_BLOCK=y
+CONFIG_TIMA=y
+CONFIG_TIMA_LKMAUTH=y
+CONFIG_TIMA_LKM_BLOCK=y
 # CONFIG_TIMA_LKMAUTH_CODE_PROT is not set
 
 #
@@ -1421,7 +1421,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1770 is not set
 # CONFIG_SENSORS_APDS990X is not set
-# CONFIG_TIMA_LOG=y
+CONFIG_TIMA_LOG=y
 # CONFIG_HMC6352 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
@@ -1435,7 +1435,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_QPNP_MISC is not set
-# CONFIG_KNOX_KAP is not set
+CONFIG_KNOX_KAP=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1664,13 +1664,13 @@ CONFIG_DM_REQ_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-# CONFIG_DM_VERITY is not set
-# CONFIG_DM_VERITY_FEC is not set
+CONFIG_DM_VERITY=y
+CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
 # CONFIG_DM_VERITY_AVB is not set
 # CONFIG_DM_ANDROID_VERITY is not set
-# CONFIG_DM_ANDROID_VERITY_AT_MOST_ONCE_DEFAULT_ENABLED is not set
+CONFIG_DM_ANDROID_VERITY_AT_MOST_ONCE_DEFAULT_ENABLED=y
 # CONFIG_DM_BOW is not set
 CONFIG_CRYPTO_FDE_KEY_UPDATE=y
 # CONFIG_TARGET_CORE is not set
@@ -5933,7 +5933,7 @@ CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_SMACK is not set
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
-# CONFIG_TIMA_UEVENT=y
+CONFIG_TIMA_UEVENT=y
 CONFIG_CRYPTO=y
 
 #
