Add crownqltechn and starqltechn dts (#10)
* Add starqltechn dts

* Add crownqltechn dts

--- a/arch/arm64/configs/starqlte_chn_open_defconfig
+++ b/arch/arm64/configs/starqlte_chn_open_defconfig
@@ -580,7 +580,7 @@ CONFIG_SETEND_EMULATION=y
 # CONFIG_UH_RKP_8G is not set
 # CONFIG_RKP_KDP is not set
 # CONFIG_RKP_NS_PROT is not set
-# CONFIG_RKP_DMAP_PROT is not st
+# CONFIG_RKP_DMAP_PROT is not set
 # CONFIG_UH_INFORM is not set
 
 #
@@ -588,7 +588,7 @@ CONFIG_SETEND_EMULATION=y
 #
 # CONFIG_RKP_CFP is not set
 # CONFIG_RKP_CFP_JOPP is not set
-# CONFIG_RKP_CFP_JOPP_MAGIC is not set
+# CONFIG_RKP_CFP_JOPP_MAGIC is not swt
 # CONFIG_RKP_CFP_ROPP is not set
 # CONFIG_RKP_CFP_ROPP_SYSREGKEY is not set
 # CONFIG_RKP_CFP_ROPP_RANDKEY is not set
@@ -641,18 +641,18 @@ CONFIG_BINFMT_SCRIPT=y
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
 CONFIG_KEYS_COMPAT=y
-# CONFIG_SEC_STARQLTE_PROJECT is not set
-CONFIG_SEC_STAR2QLTE_PROJECT=y
-# CONFIG_MACH_STAR2QLTE_SINGLE is not set
-# CONFIG_MACH_STAR2QLTE_OPEN is not set
-# CONFIG_MACH_STAR2QLTE_LDU is not set
-# CONFIG_MACH_STAR2QLTE_CAN_SINGLE is not set
-CONFIG_MACH_STAR2QLTE_CHNZC=y
-# CONFIG_MACH_STAR2QLTE_CHNHK is not set
-# CONFIG_MACH_STAR2QLTE_CHNZM is not set
-# CONFIG_MACH_STAR2QLTE_CHN_LDU is not set
-# CONFIG_MACH_STAR2QLTE_DCM is not set
-# CONFIG_MACH_STAR2QLTE_KDI is not set
+CONFIG_SEC_STARQLTE_PROJECT=y
+# CONFIG_MACH_STARQLTE_SINGLE is not set
+# CONFIG_SEC_STAR2QLTE_PROJECT is not set
+# CONFIG_MACH_STARQLTE_OPEN is not set
+# CONFIG_MACH_STARQLTE_LDU is not set
+# CONFIG_MACH_STARQLTE_CAN_SINGLE is not set
+CONFIG_MACH_STARQLTE_CHNZC=y
+# CONFIG_MACH_STARQLTE_CHNHK is not set
+# CONFIG_MACH_STARQLTE_CHNZM is not set
+# CONFIG_MACH_STARQLTE_CHN_LDU is not set
+# CONFIG_MACH_STARQLTE_DCM is not set
+# CONFIG_MACH_STARQLTE_KDI is not set
 # CONFIG_SEC_CROWNQLTE_PROJECT is not set
 # CONFIG_SEC_LYKANLTE_PROJECT is not set
 CONFIG_LOD_SEC=y
@@ -1379,7 +1379,7 @@ CONFIG_OF_BATTERYDATA=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-CONFIG_ZRAM=y
+# CONFIG_ZRAM is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -3135,11 +3135,11 @@ CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 # CONFIG_TSPP is not set
-# CONFIG_SAMSUNG_OIS_RUMBA_S4 is not set
-CONFIG_SAMSUNG_OIS_RUMBA_S6=y
+CONFIG_SAMSUNG_OIS_RUMBA_S4=y
+# CONFIG_SAMSUNG_OIS_RUMBA_S6 is not set
 # CONFIG_SAMSUNG_OIS_MCU_STM32 is not set
-CONFIG_SAMSUNG_REAR_DUAL=y
-CONFIG_SAMSUNG_MULTI_CAMERA=y
+# CONFIG_SAMSUNG_REAR_DUAL is not set
+# CONFIG_SAMSUNG_MULTI_CAMERA is not set
 CONFIG_CAMERA_SYSFS_V2=y
 CONFIG_SAMSUNG_FRONT_EEPROM=y
 CONFIG_SAMSUNG_SECURE_CAMERA=y
@@ -3299,11 +3299,11 @@ CONFIG_DISPLAY_USE_INFO=y
 # CONFIG_CABC_FUNCTION is not set
 # CONFIG_SUPPORT_POC_FLASH is not set
 # CONFIG_PANEL_S6E3HA6_AMB632NF01_WQHD is not set
-CONFIG_PANEL_S6E3HA6_AMS622MR01_WQHD=y
-# CONFIG_PANEL_S6E3HA6_AMB577MQ01_WQHD is not set
+# CONFIG_PANEL_S6E3HA6_AMS622MR01_WQHD is not set
+CONFIG_PANEL_S6E3HA6_AMB577MQ01_WQHD=y
 # CONFIG_PANEL_S6E3FA5_AMS420MS01_FHD is not set
-CONFIG_PANEL_S6E3HA8_AMB622NP01_WQHD=y
-# CONFIG_PANEL_S6E3HA8_AMB577PX01_WQHD is not set
+# CONFIG_PANEL_S6E3HA8_AMB622NP01_WQHD is not set
+CONFIG_PANEL_S6E3HA8_AMB577PX01_WQHD=y
 # CONFIG_PANEL_S6E3HA8_AMB638RD01_WQHD is not set
 # CONFIG_PANEL_S6E3FA5_AMS420QW01_FHD is not set
 CONFIG_DRM_MSM=y
@@ -5366,13 +5366,13 @@ CONFIG_TRUSTONIC_TRUSTED_UI_QC=y
 # CONFIG_FIVE_TEE_DRIVER is not set
 # CONFIG_FIVE_USE_EMULATOR is not set
 # CONFIG_FIVE_USE_TRUSTONIC is not set
-# CONFIG_FIVE_USE_QSEE=y
+# CONFIG_FIVE_USE_QSEE is not set
 # CONFIG_TEE_DRIVER_DEBUG is not set
 # CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP=y
 # CONFIG_FIVE_SIGN_TA=n
 # CONFIG_FIVE_SIGNCLIENT_PATH="/home/dpi/qb5_8814/workspace/P4_1716/buildscript/tools/signclient.jar"
 # CONFIG_FIVE_PILSPLITTER_PATH="/home/dpi/qb5_8814/workspace/P4_1716/buildscript/tools/pil_splitter.py"
-CONFIG_GATOR=m
+# CONFIG_GATOR=m
 # CONFIG_GATOR_DO_NOT_ONLINE_CORES_AT_STARTUP is not set
 
 #
@@ -5452,7 +5452,6 @@ CONFIG_QUOTACTL=y
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
 CONFIG_OVERLAY_FS=y
-
 #
 # Caches
 #
@@ -5905,20 +5904,20 @@ CONFIG_INTEGRITY_TRUSTED_KEYRING=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-# CONFIG_FIVE is not st
+# CONFIG_FIVE is not set
 # CONFIG_FIVE_DEBUG is not set
-# CONFIG_FIVE_CERT_USER is not set
-# CONFIG_FIVE_DEFAULT_HASH_SHA1 is not set
+# CONFIG_FIVE_CERT_USER="x509_five_user.der"
+# CONFIG_FIVE_DEFAULT_HASH_SHA1=y
 # CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
 # CONFIG_FIVE_DEFAULT_HASH="sha1"
-# CONFIG_FIVE_TRUSTED_KEYRING is not set
-# CONFIG_PROCA is not set
-# CONFIG_GAF is not set
+# CONFIG_FIVE_TRUSTED_KEYRING=y
+# CONFIG_PROCA=y
+# CONFIG_GAF=y
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
-# CONFIG_GAF_V6 is not set
+# CONFIG_GAF_V6=y
 
 #
 # ICCC
