--- a/arch/arm64/configs/crownqlte_chn_open_defconfig
+++ b/arch/arm64/configs/crownqlte_chn_open_defconfig
@@ -580,7 +580,7 @@ CONFIG_SETEND_EMULATION=y
 # CONFIG_UH_RKP_8G is not set
 # CONFIG_RKP_KDP is not set
 # CONFIG_RKP_NS_PROT is not set
-# CONFIG_RKP_DMAP_PROT is not st
+# CONFIG_RKP_DMAP_PROT is not
 # CONFIG_UH_INFORM is not set
 
 #
@@ -642,19 +642,19 @@ CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
 CONFIG_KEYS_COMPAT=y
 # CONFIG_SEC_STARQLTE_PROJECT is not set
-CONFIG_SEC_STAR2QLTE_PROJECT=y
-# CONFIG_MACH_STAR2QLTE_SINGLE is not set
-# CONFIG_MACH_STAR2QLTE_OPEN is not set
-# CONFIG_MACH_STAR2QLTE_LDU is not set
-# CONFIG_MACH_STAR2QLTE_CAN_SINGLE is not set
-CONFIG_MACH_STAR2QLTE_CHNZC=y
-# CONFIG_MACH_STAR2QLTE_CHNHK is not set
-# CONFIG_MACH_STAR2QLTE_CHNZM is not set
-# CONFIG_MACH_STAR2QLTE_CHN_LDU is not set
-# CONFIG_MACH_STAR2QLTE_DCM is not set
-# CONFIG_MACH_STAR2QLTE_KDI is not set
-# CONFIG_SEC_CROWNQLTE_PROJECT is not set
+# CONFIG_SEC_STAR2QLTE_PROJECT is not set
+CONFIG_SEC_CROWNQLTE_PROJECT=y
 # CONFIG_SEC_LYKANLTE_PROJECT is not set
+# CONFIG_MACH_CROWNQLTE_USA_SINGLE is not set
+# CONFIG_MACH_CROWNQLTE_USA_OPEN is not set
+# CONFIG_MACH_CROWNQLTE_USA_LDU is not set
+# CONFIG_MACH_CROWNQLTE_CAN_SINGLE is not set
+CONFIG_MACH_CROWNQLTE_CHNZC=y
+# CONFIG_MACH_CROWNQLTE_CHN_LDU is not set
+# CONFIG_MACH_CROWNQLTE_CHNZM is not set
+# CONFIG_MACH_CROWNQLTE_CHNHK is not set
+# CONFIG_MACH_CROWNQLTE_DCM is not set
+# CONFIG_MACH_CROWNQLTE_KDI is not set
 CONFIG_LOD_SEC=y
 # CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
@@ -1379,7 +1379,7 @@ CONFIG_OF_BATTERYDATA=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-CONFIG_ZRAM=y
+# CONFIG_ZRAM is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -2103,8 +2103,8 @@ CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KEYRESET=y
-CONFIG_INPUT_TOUCHSCREEN_TCLM=y
-# CONFIG_INPUT_TOUCHSCREEN_TCLMV2 is not set
+# CONFIG_INPUT_TOUCHSCREEN_TCLM is not set
+CONFIG_INPUT_TOUCHSCREEN_TCLMV2=y
 CONFIG_INPUT_KEYCOMBO=y
 
 #
@@ -2251,9 +2251,9 @@ CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICE_ACCESS=y
 # CONFIG_TOUCHSCREEN_EKTF3XXX_CHIPSET is not set
 CONFIG_SECURE_TOUCH=y
 CONFIG_TOUCHSCREEN_DUMP_MODE=y
-CONFIG_TOUCHSCREEN_SEC_TS=y
+# CONFIG_TOUCHSCREEN_SEC_TS is not set
 # CONFIG_TOUCHSCREEN_SEC_TS_GLOVEMODE is not set
-# CONFIG_TOUCHSCREEN_SEC_TS_Y771 is not set
+CONFIG_TOUCHSCREEN_SEC_TS_Y771=y
 # CONFIG_TOUCHSCREEN_SEC_TS_Y661_DUAL is not set
 # CONFIG_DUAL_TSP is not set
 CONFIG_INPUT_MISC=y
@@ -2294,8 +2294,8 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
 # CONFIG_SMI130 is not set
 # CONFIG_RMI4_CORE is not set
-# CONFIG_INPUT_WACOM is not set
-# CONFIG_EPEN_WACOM_W9018 is not set
+CONFIG_INPUT_WACOM=y
+CONFIG_EPEN_WACOM_W9018=y
 # CONFIG_EPEN_WACOM_W9019 is not set
 # CONFIG_WACOM_LCD_FREQ_COMPENSATE is not set
 
@@ -3299,12 +3299,12 @@ CONFIG_DISPLAY_USE_INFO=y
 # CONFIG_CABC_FUNCTION is not set
 # CONFIG_SUPPORT_POC_FLASH is not set
 # CONFIG_PANEL_S6E3HA6_AMB632NF01_WQHD is not set
-CONFIG_PANEL_S6E3HA6_AMS622MR01_WQHD=y
+# CONFIG_PANEL_S6E3HA6_AMS622MR01_WQHD is not set
 # CONFIG_PANEL_S6E3HA6_AMB577MQ01_WQHD is not set
 # CONFIG_PANEL_S6E3FA5_AMS420MS01_FHD is not set
 CONFIG_PANEL_S6E3HA8_AMB622NP01_WQHD=y
 # CONFIG_PANEL_S6E3HA8_AMB577PX01_WQHD is not set
-# CONFIG_PANEL_S6E3HA8_AMB638RD01_WQHD is not set
+CONFIG_PANEL_S6E3HA8_AMB638RD01_WQHD=y
 # CONFIG_PANEL_S6E3FA5_AMS420QW01_FHD is not set
 CONFIG_DRM_MSM=y
 # CONFIG_DRM_MSM_REGISTER_LOGGING is not set
@@ -5224,7 +5224,7 @@ CONFIG_STM=y
 # CONFIG_FPGA is not set
 CONFIG_SENSORS=y
 CONFIG_SENSORS_SSC=y
-CONFIG_SENSORS_DELAYED_LOAD=y
+# CONFIG_SENSORS_DELAYED_LOAD is not set
 # CONFIG_SENSORS_SYSFS is not set
 # CONFIG_SENSORS_CM36672P_IRIS is not set
 CONFIG_SENSORS_SX9320=y
@@ -5300,9 +5300,9 @@ CONFIG_BATTERY_AGE_FORECAST=y
 # CONFIG_QH_ALGORITHM is not set
 CONFIG_BATTERY_NOTIFIER=y
 CONFIG_LIMIT_CHARGING_DURING_CALL=y
-# CONFIG_ENABLE_100MA_CHARGING_BEFORE_USB_CONFIGURED is not set
-# CONFIG_WIRELESS_FIRMWARE_65 is not set
-# CONFIG_OTG_OVERCURRENT_BY_CHGIN is not set
+CONFIG_ENABLE_100MA_CHARGING_BEFORE_USB_CONFIGURED=y
+CONFIG_WIRELESS_FIRMWARE_65=y
+CONFIG_OTG_OVERCURRENT_BY_CHGIN=y
 CONFIG_SENSORS_FINGERPRINT=y
 CONFIG_SENSORS_ET5XX=y
 
@@ -5366,13 +5366,13 @@ CONFIG_TRUSTONIC_TRUSTED_UI_QC=y
 # CONFIG_FIVE_TEE_DRIVER is not set
 # CONFIG_FIVE_USE_EMULATOR is not set
 # CONFIG_FIVE_USE_TRUSTONIC is not set
-# CONFIG_FIVE_USE_QSEE=y
+# CONFIG_FIVE_USE_QSEE is not set
 # CONFIG_TEE_DRIVER_DEBUG is not set
-# CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP=y
+# CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP is not set
 # CONFIG_FIVE_SIGN_TA=n
 # CONFIG_FIVE_SIGNCLIENT_PATH="/home/dpi/qb5_8814/workspace/P4_1716/buildscript/tools/signclient.jar"
 # CONFIG_FIVE_PILSPLITTER_PATH="/home/dpi/qb5_8814/workspace/P4_1716/buildscript/tools/pil_splitter.py"
-CONFIG_GATOR=m
+# CONFIG_GATOR is not set
 # CONFIG_GATOR_DO_NOT_ONLINE_CORES_AT_STARTUP is not set
 
 #
@@ -5905,20 +5905,20 @@ CONFIG_INTEGRITY_TRUSTED_KEYRING=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-# CONFIG_FIVE is not st
+# CONFIG_FIVE is not set
 # CONFIG_FIVE_DEBUG is not set
 # CONFIG_FIVE_CERT_USER is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA1 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
-# CONFIG_FIVE_DEFAULT_HASH="sha1"
-# CONFIG_FIVE_TRUSTED_KEYRING is not set
-# CONFIG_PROCA is not set
+# CONFIG_FIVE_DEFAULT_HASH is not set
+# CONFIG_FIVE_TRUSTED_KEYRING is not swt
+# CONFIG_PROCA=y
 # CONFIG_GAF is not set
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
-# CONFIG_GAF_V6 is not set
+# CONFIG_GAF_V6 is not swt
 
 #
 # ICCC
